# shell_auto_rpi

./: .gitignore  README.md
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/airsim_car_ros_pkgs/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/shell_simulation/: .catkin  local_setup.sh
devel/.private/simple_airsim_interface/: .catkin  local_setup.sh
devel/include/airsim_car_ros_pkgs/: CarCmd.h  Collision.h  GPSYaw.h  GimbalAngleEulerCmd.h  GimbalAngleQuatCmd.h  Land.h  LandGroup.h  LandGroupRequest.h  LandGroupResponse.h  LandRequest.h  LandResponse.h  Reset.h  ResetRequest.h  ResetResponse.h  SetGPSPosition.h  SetGPSPositionRequest.h  Takeoff.h  (+11 more)
install/: setup.sh
logs/airsim_car_ros_pkgs/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.008.log.stderr  build.make.016.log.stderr
logs/shell_simulation/: build.check.007.log.stderr  build.check.012.log.stderr  build.check.014.log.stderr  build.check.015.log.stderr  build.check.021.log.stderr  build.check.022.log.stderr  build.check.025.log.stderr  build.check.026.log.stderr  build.check.027.log.stderr  build.check.032.log.stderr  build.check.035.log.stderr  build.check.043.log.stderr  build.install.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.026.log.stderr  build.make.028.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.038.log.stderr  build.make.040.log.stderr
src/airsim_car_ros_pkgs/: CMakeLists.txt
src/shell_simulation/: CMakeLists.txt  package.xml
src/simple_airsim_interface/: CMakeLists.txt  README.md  package.xml
src/simple_airsim_interface/launch/: simple_cpp_example.launch
src/simple_airsim_interface/nodes/: airsim_example
src/simple_airsim_interface/src/: airsim_cpp_example.cpp
(+279 files in other folders)
